--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Beyond The Book</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Draw_book.png/1110px-Draw_book.png">
 </head>
 <body>
   <div id="app"></div>
